# cp_standalone_example

./: .gitignore  README.md  animal_counter.py  count_elk.py  cow_agent.py  cow_prompt.md  pyproject.toml
tests/: __init__.py  test_cow_agent.py
