[project]
name = "animal-counter"
version = "0.1.0"
description = "ðŸ„ðŸ‘ï¸ Bessie the CV Cow - counts animals in images using OpenCV"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "code-puppy==0.0.387",
]

[project.scripts]
animal-counter = "animal_counter:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
